# Israelgpt

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  agents.md  bot.py  grafana-agent.yaml  requirements.txt
.github/workflows/: deploy.yml  status.yml
autobumper/: config.json  index.js  package.json
microservices/command_gateway/: main.py
microservices/status_notifier/: main.py
microservices/worker/: main.py
src/: __init__.py  bot.py  levels_db.py  llm_client.py  llm_history.py  main.py  tickets.py  user_tracking.py
src/cogs/: __init__.py  admin.py  community.py  economy.py  government.py  moderation.py  music.py  tickets.py  voice.py  voice_record.py
src/config/: __init__.py  guild_config.py  settings.py
src/core/: __init__.py  activity.py  bot.py  events.py
src/db/: __init__.py  audit.py  economy.py  engine.py  guild_config.py  levels.py  llm.py  transcriptions.py  users.py  voice_logs.py
src/economy_service/: __init__.py  rust_adapter.py  service.py
src/observability/: __init__.py  metrics.py
src/rust_core/: Cargo.toml  README.md  pyproject.toml
src/rust_core/src/: lib.rs
src/services/: __init__.py  audit.py  leveling.py  transcription.py
src/services/economy/: __init__.py  year_tick.py
src/services/llm/: __init__.py  chat.py  client.py  safety.py
src/taskqueue/: __init__.py
src/utils/: __init__.py  helpers.py
