[package]
name = "guildest_core"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust functions for Guildest Discord bot"

[lib]
name = "guildest_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
regex = "1.10"
dashmap = "5.5"

[profile.release]
lto = true
opt-level = 3
